Index Admin Dashboard

--- a/Components/ServiceStatusCard.razor
+++ b/Components/ServiceStatusCard.razor
@@ -1,4 +1,7 @@
-﻿<h3>Service Status</h3>
+﻿<div class="card card-body bg-light">
+    <h3 class="card-title">Service status</h3>
+    <h4 class="card-text">Placeholder</h4>
+</div>
 
 @code {
 
