Use Icon for the app logo

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -6,7 +6,7 @@
             
             <nav class="navbar p-0 h-100 flex-column">
                 <div class="top-row align-items-center text-center w-100 navbar navbar-dark">
-                    <a class="w-100 pt-3 h-100 navbar-brand mx-auto my-auto" href="">Web App</a>
+                    <a class="w-100 h-100 navbar-brand mx-auto my-auto" href=""><h2><span class="medical-icon-i-health-services" /></h2></a>
                 </div>
                 <div>
                     <div class="nav-item px-3 col-12">
