Fix admin links

--- a/Pages/EditAdministrator.razor
+++ b/Pages/EditAdministrator.razor
@@ -100,7 +100,7 @@
                     </button>
                 </div>
                 <div class="col-md-4 col-sm-12 mb-md-0 mb-sm-3">
-                    <a disabled="@DisableInput" href="patients" class="btn btn-lg btn-secondary w-100">
+                    <a disabled="@DisableInput" href="administrators" class="btn btn-lg btn-secondary w-100">
                         Discard changes
                     </a>
                 </div>
