--- a/Pages/AdministratorDetails.razor
+++ b/Pages/AdministratorDetails.razor
@@ -113,12 +113,12 @@
             </div>
             <div class="row mb-4">
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                    <a href="edit_patient/@(administrator.UUID)" class="btn btn-lg btn-warning w-100">
+                    <a href="edit_administrator/@(administrator.UUID)" class="btn btn-lg btn-warning w-100">
                         Edit
                     </a>
                 </div>
                 <div class="col-md-6 col-sm-12 mb-md-0 mb-sm-3">
-                    <a href="print_patient_details/@(administrator.UUID)" class="btn btn-lg btn-secondary w-100">
+                    <a href="print_administrator_details/@(administrator.UUID)" class="btn btn-lg btn-secondary w-100">
                         Print
                     </a>
                 </div>
