--- a/Pages/Companies.razor
+++ b/Pages/Companies.razor
@@ -29,7 +29,7 @@
             </div>
             <div class="row col-12 mb-3">
                 <div class="col-12">
-                    <CompanyTable Companies="companies.items" Link="company_details" />
+                    <CompanyTable Companies="companies.items" Link="company_details" PageNumber="currentPage" PageSize="pageSize"/>
                 </div>
             </div>
             <div class="row col-12 mb-3 justify-content-center">
